# pconnect

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
network_protocols_for_paxos_lib/: CMakeLists.txt
network_protocols_for_paxos_lib/include/core/: connector.h
network_protocols_for_paxos_lib/src/: library.cpp
network_protocols_for_paxos_lib/src/core/: connector.cpp
network_protocols_for_paxos_test/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  library.h
